completed the challenge

--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,11 @@ Variables
   --soft-violet: hsl(277, 64%, 61%);
   --white: hsl(0, 0%, 100%);
   --slightly-transparent-white-1: hsla(0, 0%, 100%, 0.75);
-  --slightly-transparent-white-1: hsla(0, 0%, 100%, 0.6);
+  --slightly-transparent-white-2: hsla(0, 0%, 100%, 0.6);
 }
-
+.body {
+  font-size: 15px;
+}
 /* 
 =============
 Hero
@@ -25,28 +27,134 @@ Hero
 */
 .hero {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   background: var(--very-dark-blue);
+  padding: 10rem 0;
 }
 .banner {
-  width: 90%;
-  max-width: 375px;
+  width: 80%;
+  background: var(--dark-desaturated-blue);
+  border-radius: 0.5rem;
   display: flex;
   flex-direction: column;
-  background: var(--dark-desaturated-blue);
 }
 
 .banner-img-container {
-  background: var(--soft-violet);
   width: 100%;
-  height: 100%;
+  background: hsl(277, 64%, 50%);
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 
 .banner-img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  display: block;
+  object-fit: cover;
+  opacity: 0.5;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+}
+.banner-info {
+  color: var(--white);
+}
+.title {
+  text-align: center;
+  font-family: "Inter", sans-serif;
+  width: 60%;
+  margin: 2rem auto 1rem auto;
+  font-weight: 700;
+}
+
+.title span {
+  color: var(--soft-violet);
+}
+
+.text {
+  text-align: center;
+  font-family: "Lexend Deca", sans-serif;
+  width: 75%;
+  font-weight: 100;
+  color: var(--slightly-transparent-white-1);
+  margin: 1rem auto;
+}
+.numbers {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem auto;
+}
+.number {
+  margin: 1rem auto;
+  text-align: center;
+}
+.number h1 {
+  font-family: "Inter", sans-serif;
+}
+.number p {
+  text-transform: uppercase;
+  text-align: center;
+  color: var(--slightly-transparent-white-1);
+  font-family: "Lexend Deca", sans-serif;
+  font-size: 15px;
+  font-weight: 300;
+  margin: 0.3rem auto;
+}
+
+@media screen and (min-width: 768px) {
+  .banner {
+    flex-direction: row;
+    width: 75%;
+  }
+  .numbers {
+    flex-direction: row;
+  }
+
+  .banner-img-container {
+    order: 2;
+    width: 50%;
+    object-fit: cover;
+    border-top-left-radius: unset;
+    border-top-right-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+  }
+  .banner-img {
+    border-bottom-right-radius: 0.5rem;
+    border-top-left-radius: unset;
+  }
+  .banner-info {
+    width: 50%;
+    text-align: left;
+  }
+  .title {
+    text-align: left;
+    width: 70%;
+    margin-top: 4rem;
+    font-size: 2rem;
+  }
+
+  .text {
+    margin-top: 2rem;
+    text-align: left;
+    width: 70%;
+  }
+  .numbers {
+    display: flex;
+    justify-content: flex-start;
+    width: 70%;
+    margin-top: 3rem;
+  }
+  .number {
+    margin-left: 0;
+    text-align: left;
+  }
+  .number h1 {
+    font-size: 1rem;
+  }
+  .number p {
+    font-size: 0.8rem;
+  }
 }
