--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ Variables
 }
 .body {
   font-size: 15px;
+  width: 100vw;
 }
 /* 
 =============
@@ -26,8 +27,9 @@ Hero
 =============
 */
 .hero {
-  width: 100vw;
+  width: 100%;
   height: 100%;
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -105,6 +107,9 @@ Hero
 }
 
 @media screen and (min-width: 768px) {
+  .hero {
+    width: 100%;
+  }
   .banner {
     flex-direction: row;
     width: 75%;
